--- a/applicant-server/views/search-results.ejs
+++ b/applicant-server/views/search-results.ejs
@@ -328,7 +328,7 @@ id="navbar">
                     <i class="far fa-clock mr-1"></i>
                     <%= formatTimeAgo(int.createdAt) %>
                   </span>
-                  <form action="/applyforJobs/<%= int._id %>" method="POST">
+                  <form action="/applyforInternships/<%= int._id %>" method="POST">
                     <button type="submit" class="btn-apply px-4 py-2 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-lg font-medium hover:from-blue-600 hover:to-blue-700 transition-all duration-300 flex items-center">
                       Apply Now <i class="fas fa-arrow-right ml-2"></i>
                     </button>
