--- a/recruiter-server/views/home.ejs
+++ b/recruiter-server/views/home.ejs
@@ -112,7 +112,7 @@
         <p class="text-blue-800 font-bold">Internships Offered</p>
       </div>
       <div>
-        <p class="text-4xl font-bold mb-2"><%= candidateCount %></p>
+        <p class="text-4xl font-bold mb-2"><%= candidateCount %>+</p>
         <p class="text-blue-800 font-bold">Candidates</p>
       </div>
       <div>
