--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -263,6 +263,12 @@
                     <span class="inline-block px-3 py-1 text-sm font-medium text-green-500 bg-green-100 rounded-full">
                       Positions: <%= job.noofPositions %>
                     </span>
+                    <span class="inline-block px-3 py-1 text-sm font-medium text-red-500 bg-red-100 rounded-full">
+                      Expiry:
+                      <td class="inline-block px-3 py-1 text-sm font-medium text-red-500 bg-red-100 rounded-full">
+                        <%= new Date(job.jobExpiry).toLocaleDateString('en-GB') %>
+                      </td>
+                    </span>
                   </div>
                 </div>
               </div>
