--- a/applicant-server/views/profile.ejs
+++ b/applicant-server/views/profile.ejs
@@ -210,7 +210,73 @@
             </form>
             <% } %>
       </div>
+      <!-- Application History Section -->
+      <div class="mt-8">
+        <h3 class="text-xl text-black mb-4">Application History</h3>
+
+        <% if (applicationHistory && applicationHistory.length> 0) { %>
+          <div class="overflow-x-auto">
+            <table class="min-w-full bg-white rounded-lg overflow-hidden">
+              <thead class="bg-gray-100">
+                <tr>
+                  <th class="py-3 text-black px-4 text-left text-gray-700 font-medium">Type</th>
+                  <th class="py-3  text-black px-4 text-left text-gray-700 font-medium">Title</th>
+                  <th class="py-3  text-black px-4 text-left text-gray-700 font-medium">Company</th>
+                  <th class="py-3 text-black  px-4 text-left text-gray-700 font-medium">Applied Date</th>
+                  <th class="py-3  text-black px-4 text-left text-gray-700 font-medium">Status</th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200">
+                <% applicationHistory.forEach(application=> { %>
+                  <tr class="hover:bg-gray-50 transition-colors">
+                    <td class="py-3 px-4 text-black">
+                      <%= application.type %>
+                    </td>
+                    <td class="py-3 px-4 text-black">
+                      <%= application.title %>
+                    </td>
+                    <td class="py-3 px-4 text-black">
+                      <%= application.company %>
+                    </td>
+                    <td class="py-3 px-4 text-black">
+                      <%= application.appliedAt.toLocaleDateString() %>
+                    </td>
+                    <td class="py-3 px-4">
+                      <span class="px-2 py-1 text-xs font-medium rounded-full 
+                  <%= application.status === 'Pending' ? 'bg-yellow-100 text-yellow-800' : '' %>
+                  <%= application.status === 'Accepted' ? 'bg-green-100 text-green-800' : '' %>
+                  <%= application.status === 'Rejected' ? 'bg-red-100 text-red-800' : '' %>">
+                        <%= application.status %>
+                      </span>
+                    </td>
+                  </tr>
+                  <% }); %>
+              </tbody>
+            </table>
+          </div>
+          <% } else { %>
+            <div class="bg-blue-50 border-l-4 border-blue-400 p-4">
+              <div class="flex">
+                <div class="flex-shrink-0">
+                  <svg class="h-5 w-5 text-blue-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                    fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2h-1V9z"
+                      clip-rule="evenodd" />
+                  </svg>
+                </div>
+                <div class="ml-3">
+                  <p class="text-sm text-blue-700">
+                    No applications found. Start applying to jobs and internships to see your history here.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <% } %>
+      </div>
     </div>
+
+
   </header>
 
   <script>
