tailwind for admin

--- a/admin-server/views/layout/header.ejs
+++ b/admin-server/views/layout/header.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoHire - Admin Dashboard</title>
     <link rel="stylesheet" href="/admin-server/public/style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">  </head>
-<body>
+    <link href="/css/tailwind.min.css" rel="stylesheet">
+    <body>
     <div class="relative bg-white shadow-md bg-indigo-400">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between h-16">
